--- a/orchestrator/requirements.txt
+++ b/orchestrator/requirements.txt
@@ -25,6 +25,11 @@ python-dotenv>=1.0.0
 httpx>=0.26.0
 tenacity>=8.2.0
 
+# FastAPI and Rate Limiting
+fastapi>=0.109.0
+uvicorn>=0.27.0
+slowapi>=0.1.9
+
 # Embeddings
 sentence-transformers>=2.3.0
 numpy>=1.26.0
